# moon_planner

./: .gitignore  CMakeLists.txt  README.md  基于状态栅格图搜索的月球车路径规划技术方案.docx  技术要点清单（总）(改)(6).docx
cmake/: ProjectOptions.cmake  Sanitizers.cmake
config/: cost_weights_default.yaml  planner_default.yaml  primitive_default.yaml  vehicle_default.yaml
docs/: architecture.md  data_formats.md  roadmap.md  test_plan.md
include/moon_planner/collision/: collision_checker.hpp  footprint.hpp
include/moon_planner/config/: cost_config.hpp  planner_config.hpp  vehicle_config.hpp
include/moon_planner/core/: geometry.hpp  math_utils.hpp  status.hpp  time.hpp  types.hpp
include/moon_planner/cost/: heuristic.hpp  primitive_cost.hpp  traversability_evaluator.hpp
include/moon_planner/io/: map_reader.hpp  map_writer.hpp  primitive_io.hpp  scenario_reader.hpp  trajectory_writer.hpp  yaml_loader.hpp
include/moon_planner/map/: cost_map.hpp  elevation_grid.hpp  grid_index.hpp  history_layer.hpp  map_fusion.hpp  occupancy_grid.hpp
include/moon_planner/model/: motion_constraints.hpp  skid_steer_model.hpp
include/moon_planner/planner/: lattice_planner.hpp  local_planner.hpp  planner_interface.hpp  recovery_planner.hpp
include/moon_planner/primitives/: motion_primitive.hpp  primitive_generator.hpp  primitive_library.hpp
include/moon_planner/runtime/: diagnostics.hpp  memory_pool.hpp  planner_context.hpp  scheduler.hpp
include/moon_planner/search/: hybrid_astar.hpp  open_list.hpp  search_node.hpp  state_lattice.hpp
include/moon_planner/trajectory/: path_extractor.hpp  trajectory_generator.hpp  trajectory_smoother.hpp
scenarios/: README.md  dense_obstacles.yaml  flat_empty.yaml  history_obstacles.yaml  slope_region.yaml
src/apps/: benchmark_planner.cpp  generate_primitives.cpp  moon_planner_cli.cpp
src/collision/: collision_checker.cpp  footprint.cpp
src/config/: cost_config.cpp  planner_config.cpp  vehicle_config.cpp
src/core/: geometry.cpp
src/cost/: heuristic.cpp  primitive_cost.cpp  traversability_evaluator.cpp
src/io/: map_reader.cpp  map_writer.cpp  primitive_io.cpp  scenario_reader.cpp  trajectory_writer.cpp  yaml_loader.cpp
src/map/: cost_map.cpp  elevation_grid.cpp  grid_index.cpp  history_layer.cpp  map_fusion.cpp  occupancy_grid.cpp
src/model/: motion_constraints.cpp  skid_steer_model.cpp
src/planner/: lattice_planner.cpp  local_planner.cpp  recovery_planner.cpp
src/primitives/: primitive_generator.cpp  primitive_library.cpp
src/runtime/: diagnostics.cpp  memory_pool.cpp  planner_context.cpp  scheduler.cpp
src/search/: hybrid_astar.cpp  open_list.cpp  state_lattice.cpp
src/trajectory/: path_extractor.cpp  trajectory_generator.cpp  trajectory_smoother.cpp
tests/integration/: test_near_obstacle_recovery.cpp  test_planner_dense_obstacles.cpp  test_planner_flat_map.cpp  test_planner_history_obstacles.cpp  test_planner_slope_map.cpp
tests/unit/: test_collision_checker.cpp  test_cost_map.cpp  test_grid_index.cpp  test_history_layer.cpp  test_local_planner.cpp  test_recovery_planner.cpp  test_scenario_reader.cpp  test_skid_steer_model.cpp  test_yaml_loader.cpp
tools/: convert_map.py  plot_trajectory.py  summarize_benchmark.py
